--- a/css/selectors.css
+++ b/css/selectors.css
@@ -8,7 +8,7 @@
 /*  selector for all "h1" elements
     that are a descendent of id="container"
     and have a class of "fancy-header" */
-h1.fancy-header  {
+#container h1.fancy-header  {
     color: blue;
     text-decoration: underline;
 }
@@ -19,13 +19,15 @@ em {
 }
 
 /* selector for all elements with class="article" */
-#article {
+.article {
     clear:both;
 }
 
 /*  selector for all "anchor" elements
     that are a direct child of an element with class="article" */
-a {
+.article>a {
     float:right;
 }
+
+
 
