--- a/css/getting-git.css
+++ b/css/getting-git.css
@@ -1,9 +1,76 @@
 .top-part {
     width: 100%;
-    height: 562px;
+    height: 310px;
     border: 0px;
-    position: fixed;
     top: 0px;
     left: 0px;
-    background-color: #ff6d68;
+    background-color: #cf4645;
+
+}
+.main-part {
+    background-color: #fff;
+    width: 100%;
+    float: left;
+
+}
+.get-started {
+    background-color: #cf4645;
+    width: 100%;
+
+}
+.questions-footer {
+    background-color: #fff;
+    width: 100%;
+    bottom: 0px;
+
+
+}
+#button {
+        display: block;
+        min-height: 30px;
+
+
+        font-size:14px
+        color: #fff;
+
+}
+#log-in {
+    position: absolute;
+    top: 20px;
+    right: 20px;
+    background: rgba(255, 255, 255, 0.23);
+    padding: 3px 8px;
+    border-radius: 2px;
+    font-size: 16px;
+    color; #fff;
+    text-decoration-color: #fff;
+}
+img {
+    /*position: relative;*/
+    /*top: 50%;*/
+    /*left: 50%;*/
+}
+* {
+    text-align: center;
+}
+h4 {
+    font-family: 'Open Sans','Helvetica Neue',Arial,sans-serif;;
+    font-size: 24px;
+}
+p {
+    font-weight: 300;
+    font-size: 1em;
+    margin-bottom: 20px;
+}
+h2 {
+    font-weight: 500;
+    line-height: 1.1;
+}
+code {
+    word-spacing: -4px;
+    padding: 2px 4px;
+    font-size: 90%
+    color: #c7254e;
+    background-color: #f9f2f4;
+    border-radius: 4px;
 }
