Adding changes to facebook.hmtl

--- a/css/css-facebook.css
+++ b/css/css-facebook.css
@@ -12,13 +12,13 @@
     position: absolute;
 }
 .mid-content {
-    width: 100%
+    width: 100%;
     border: 0px;
     background-color: #edf0f5;
     color: #333;
 }
 .bottom-footer {
-    width: 100%
+    width: 100%;
     border: 0px;
     left: 0px;
     bottom: 0px;
