--- a/css/getting-git.css
+++ b/css/getting-git.css
@@ -25,13 +25,15 @@
 
 
 }
-#button {
-        display: block;
-        min-height: 30px;
-
-
-        font-size:14px
-        color: #fff;
+.btn {
+    border: 2px solid black;
+    background-color: white;
+    color: black;
+    padding: 14px 28px;
+    font-size: 16px;
+    cursor: pointer;
+    text-align: center;
+}
 
 }
 #log-in {
