--- a/css/media-queries-grid.css
+++ b/css/media-queries-grid.css
@@ -19,15 +19,12 @@ h1 {
     clear: both;
 }
 
+
 .column {
     float: left;
     width: 100%;
     box-sizing: border-box;
     padding: 0 10px;
-    background: lightgrey;
-    border-style: solid;
-    border-width: 1px;
-    border-color: black;
     margin-bottom: 5px;
 }
 
@@ -39,13 +36,23 @@ h1 {
 }
 .nav-links {
     padding-left: 0;
+
 }
+.nav-links li {
+    background-color: #d3d3d3;
+    padding: 1em;
+    text-align: center;
+    margin-bottom: .5em;
+    list-style-type: none;
+}
+
 
 .link{
     background-color: #d3d3d3;
     padding: 1em;
     text-align: center;
-    list-style: none;
+    list-style-type: none;
+
 }
 .sub-section {
     font-style: italic;
@@ -76,18 +83,25 @@ img {
 
     /*https://stackoverflow.com/questions/20920265/horizontal-menu-how-to-float-right-but-keep-the-menu-items-in-the-correct-order*/
 
+
+
     .nav-links {
         float: right;
         text-align: right;
-        width: 10%;
+
     }
 
-    .links  {
+    .link  {
         display: inline-block;
         background-color: transparent;
         padding: .2em;
-        line-height: 4em
-
+        line-height: 4em;
+        width: 50%;
+    }
+    .nav-links li {
+        float: right;
+        padding: 10px;
+        background-color: transparent;
     }
     img {
         height: 385px;
@@ -97,12 +111,10 @@ img {
     }
     .main {
         float: left;
-    }
-    .mainmain {
         width: 66%;
     }
-    .sub {
-        clear: both;
+
+    .sub-section {
         float: right;
         width: 33%;
     }
